<resources>
    <string name="app_name">Cupones</string>
    <string name="main_button_consult">Consultar</string>
    <string name="main_button_create">Crear Cupon</string>
    <string name="main_text_title">Bienvenido, ingrese su cupón y a continuación presione en consultar</string>
    <string name="main_hint_cupon">Cupón</string>
    <string name="main_hint_descripcion">Descripción</string>
    <string name="error_unique_code">Este cupón ya existe, agregue un código diferente</string>
    <string name="error_invalid_length">El cupón debe tener entre 5 y 10 caracteres</string>
    <string name="error_unknow">Error desconocido al crear cupon</string>
    <string name="main_save_success">Cupón Creado</string>
    <string name="main_hint_active">Cupón Activo</string>
</resources>